finished up introduction and background. may require some small adjustments to make longer depending on size of rest of report.

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,5 +1,8 @@
 \section {Introduction}
-\IEEEPARstart{I}{n} 2014 it was estimated that approximately 10\% of MLB pitchers had undergone Tommy John surgery \cite{Erickson2014}. However, a more recent study (2016) suggests that number has increased dramatically to 25\% \cite{Keller2016}. The sharp increase could be related to better diagnosis criteria and injury data being more readily available. However, regardless of the increase in numbers, the current risk is large with very little known about the risk factors. At a minimum the injury is season ending, but it has the potential to alter pitchers careers and have a financial impact on their teams.
+\IEEEPARstart{I}{n} 2015 the first ever prevalance study was conducted within all 30 Major League Baseball (MLB) organizations and reported 25\% of MLB pitchers had received TJS \cite{Conte2015}. Estimates previously had suggested the rate was much lower at 10\% \cite{Erickson2014}. The rapid rise in TJS occurance could be an increase in the number of injuries or simply be related to better understanding of the issue and injury data being more readily available allowing for more accurate measure \cite{Safran2005}. Regardless of the causes behind the numbers, the current risk is large with very little known about the risk factors. This makes it difficult for team doctors and pitchers to take the necessary preventative measures to avoid injury. At a minimum the injury is season ending, but it has the potential to alter pitchers career paths and have a financial impact on their teams.
 
+It was reported that Major League Baseball's annual revenue for 2015 was \$9.5 billion \cite{ForbesMLB}. Some of the top grossing teams can afford to pay large multi-year contracts exceed \$200 million making players expensive assets to their teams. The teams investment can only be realized when the player is healthy and playing. It has been reported that elbow related injuries account for an average of 4451 days lost per MLB season \cite{Conte2015}. As such teams wish to mitigate their risk by investing in players with low risk exposure to long term injuries as well as winning performance measures.
 
-** \emph{expand on financial impact and wider problem beyond the individual pitchers} **
+Given the high prevalence of TJS observed along with the high monetary value of baseball players, it is of both medical and financial interest to investigate the risk factors associated with players requiring Tommy John surgery. By identifying risk factors it can help to develop preventative measures as well as reduce the risk exposure to teams regarding a player's health.
+
+In this report we present an overview of the ulnar collateral ligament (UCL) and the damage that leads to Tommy John surgery. The problem of UCL injury and Tommy John surgery is then reviewed through previous published work in medical and academic journals. Based on this information present our own analysis of he problem using logistic regression and artifiial networks. Our results are discussed and compared with previous literature. We conclude with suggested future directions for furthering the understanding of the risks in baseball that lead to TJS.
