--- a/report/references.bib
+++ b/report/references.bib
@@ -1,3 +1,7 @@
+%%
+%% journal article references
+%%
+
 @article{Jiang2014,
 author = {Jiang, Jimmy J and Leland, J Martin},
 doi = {10.1177/0363546513519072},
@@ -80,7 +84,7 @@ year = {2015}
 }
 
 @article{Conte2015,
-author = {Conte, Stan a and Fleisig, Glenn S and Dines, Joshua S and Wilk, Kevin E and Aune, Kyle T and Patterson-Flynn, Nancy and ElAttrache, Neal},
+author = {Conte, Stan A and Fleisig, Glenn S and Dines, Joshua S and Wilk, Kevin E and Aune, Kyle T and Patterson-Flynn, Nancy and ElAttrache, Neal},
 doi = {10.1177/0363546515580792},
 journal = {The American Journal of Sports Medicine},
 number = {7},
@@ -91,3 +95,43 @@ volume = {43},
 year = {2015}
 }
 
+@article{Safran2005,
+author = {Safran, Marc and Ahmad, Christopher S and Elattrache, Neal S},
+doi = {10.1016/j.arthro.2005.07.001},
+journal = {Arthroscopy : the journal of arthroscopic {\&} related surgery},
+number = {11},
+pages = {1381--1395},
+pmid = {16325092},
+title = {{Ulnar collateral ligament of the elbow.}},
+volume = {21},
+year = {2005}
+}
+
+@article{Fast2010,
+author = {Fast, Mike},
+journal = {The Hardball Times Baseball Annual 2010},
+pages = {1--6},
+title = {{What the Heck is PITCHf/x?}},
+year = {2010}
+}
+
+
+%%
+%% online references
+%%
+
+@online{ForbesMLB,
+author = {Forbes},
+title = {{MLB Sees Record Revenues For 2015} Up \$500 Million And Approaching \$9.5 Billion},
+year = 2015,
+url = {http://www.forbes.com/sites/maurybrown/2015/12/04/mlb-sees-record-revenues-for-2015-up-500-million-and-approaching-9-5-billion/print/},
+urldate = {2016-04-28}
+}
+
+@online{NYTucl,
+author = {New York Times},
+title = {{Why the Ulnar Collateral Ligament Tears}},
+year = 2013,
+url = {http://www.nytimes.com/interactive/2013/09/18/sports/baseball/why-the-ulnar-collateral-ligament-tears.html},
+urldate = {2016-04-28}
+}
