--- a/report/report.tex
+++ b/report/report.tex
@@ -28,7 +28,7 @@
 % declare the path(s) where your graphic files are
 % and their extensions so you won't have to specify these with
 % every instance of \includegraphics
-\graphicspath{}
+\graphicspath{{figs/}}
 \DeclareGraphicsExtensions{.png}
 % graphicx was written by David Carlisle and Sebastian Rahtz. It is
 % required if you want graphics, photos, etc. graphicx.sty is already
