started methodology section. most of data collection is complete.

--- a/report/lit_review.tex
+++ b/report/lit_review.tex
@@ -22,7 +22,7 @@ The UCL is a thick triangular ligament where each side of the triangle is a sepa
 \begin{figure}[hb]
     \centering
         \includegraphics[width=0.3\textwidth]{ucl_torque}
-    \caption{Arm rotates around the elbow generating high valgus stress on the UCL. \cite{NYTucl}}
+    \caption{As arm rotates high valgus stress is generated on the UCL. \cite{NYTucl}}
     \label{fig:ucl_torque}
 \end{figure}
 
