--- a/report/references.bib
+++ b/report/references.bib
@@ -135,3 +135,35 @@ year = 2013,
 url = {http://www.nytimes.com/interactive/2013/09/18/sports/baseball/why-the-ulnar-collateral-ligament-tears.html},
 urldate = {2016-04-28}
 }
+
+@online{ChadwickBD,
+author = {Chadwick},
+title = {{Baseball Databank}},
+year = 2016,
+url = {https://github.com/chadwickbureau/baseballdatabank},
+urldate = {2016-04-28}
+}
+
+@online{ChadwickR,
+author = {Chadwick},
+title = {{Baseball Databank}},
+year = 2016,
+url = {https://github.com/chadwickbureau/register},
+urldate = {2016-04-28}
+}
+
+@online{Fangraphs,
+author = {FanGraphs},
+title = {{wOBA and FIP Constants}},
+year = 2016,
+url = {http://www.fangraphs.com/guts.aspx?type=cn},
+urldate = {2016-04-28}
+}
+
+@online{FangraphsFIP,
+author = {FanGraphs},
+title = {{FIP}},
+year = 2016,
+url = {http://www.fangraphs.com/library/pitching/fip/},
+urldate = {2016-04-28}
+}
