--- a/report/methodology.tex
+++ b/report/methodology.tex
@@ -15,7 +15,9 @@ To construct the data set first a list of potential TJS case pitchers were obtai
 
 \subsection{Input Selection}
 
-Inputs were selected based on what was used in previous literature as well as taking into account critiques and improvements \cite{Gray2014}. From the statistical data, we selected home runs (HR), walks (BB), batters hit by pitch (HBP), strike outs (K), and innings pitched (IP). As stated above, these statistical variables were used to calculate the FIP score for each pitcher in an attempt to get a comparable performance statistic between pitchers. From the PITCHf/X data we selected average release speed (mph), max release speed (maxmph), horizontal movement (pfx\_x), vertical movement (pfx\_z), horizontal pitch location (hloc), vertical pitch location (vloc), and grooved pitches (bway) which are pitches straight down the center of home plate. These variables were selected for each pitch type the player had used in the index year and year prior. Pitch counts were also collected for each pitch type a player had. The number of pitch types each pitcher has, therefore the number of variables with values could vary. To account for this we replaced any NA in pitchF/x and pitch count data with a 0 value. In total there were 173 input variables per player, however as previously stated many of these could be 0 due to pitchers not throwing all pitch types.
+Inputs were selected based on what was used in previous literature as well as taking into account critiques and improvements \cite{Gray2014}. From the statistical data, we selected home runs (HR), walks (BB), batters hit by pitch (HBP), strike outs (K), and innings pitched (IP). As stated above, these statistical variables were used to calculate the FIP score for each pitcher in an attempt to get a comparable performance statistic between pitchers. From the PITCHf/X data we selected average release speed (mph), max release speed (maxmph), horizontal movement (pfx\_x), vertical movement (pfx\_z), horizontal pitch location (hloc), vertical pitch location (vloc), and grooved pitches (bway) which are pitches straight down the center of home plate.
+
+These variables were selected for each pitch type the player had used in the index year and year prior. Pitch counts were also collected for each pitch type a player had. The number of pitch types each pitcher has, therefore the number of variables with values could vary. To account for this we replaced any NA in pitchF/x and pitch count data with a 0 value. In total there were 156 input variables per player, however as previously stated many of these could be 0 due to pitchers not throwing all pitch types. One pitch type, screwballs, was only found in some control pitchers and was therefore dropped since no TJS pitcher had thrown any in their respective years.
 
 \subsection{Control Selection}
 
