further work on report

--- a/report/report.tex
+++ b/report/report.tex
@@ -182,6 +182,9 @@
 \input{intro}
 \input{lit_review}
 \input{methodology}
+\input{experiments}
+\input{analysis}
+\input{conclusion}
 
 
 % if have a single appendix:
