updated report structure

--- a/report/report.tex
+++ b/report/report.tex
@@ -182,7 +182,9 @@
 \input{intro}
 \input{lit_review}
 \input{methodology}
-
+\input{experiments}
+\input{analysis}
+\input{conclusion}
 
 % if have a single appendix:
 %\appendix[Proof of the Zonklar Equations]
