--- a/report/analysis.tex
+++ b/report/analysis.tex
@@ -1,2 +1,29 @@
 \section{Analysis}
 
+The average age of pitchers was 30 years old and average FIP scores were similar for index year and year prior as seen in Table \ref{tbl:desc-stats}. None of these variables showed a significant difference in logistic regression.
+
+\begin{table}[h]
+\centering
+\caption{Average age and FIP score for pitchers}
+\label{tbl:desc-stats}
+\begin{tabular}{clll}
+     & Means & SD (+/-)  \\
+Age  & 30    & 3.8  \\
+FIPx & 4.37  & 1.9  \\
+FIPy & 4.23  & 1.68
+\end{tabular}
+\end{table}
+
+Table \ref{tbl:conf-matrix} shows a confusion matrix on the prediction of our random forest. An accuracy of 52.38\% was reported but this was mostly due to the model failing to predict anything as a TJS. The 95\% confidence intervals reported for this accuracy was 0.2978 to 0.7429. This large spread also shows the model was essentially unable to properly classify the data.
+
+\begin{table}[h]
+\centering
+\caption{Confusion matrix for random forest conducted on our dataset}
+\label{tbl:conf-matrix}
+\begin{tabular}{lll}
+           & \multicolumn{2}{l}{Reference} \\
+Prediction & 0             & 1             \\
+0          & 8             & 1             \\
+1          & 9             & 3
+\end{tabular}
+\end{table}
