--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,8 +1,9 @@
-\section{Discussion}
+\section{Conclusion}
 
-Our failure to find results echos much the previous work on the topic of TJS. It remains to be an elusive issue that will continue to require the application of various machine learning algorithms to slowly reveal risk factors. However, our main issue from the start was curse of dimensionality. We tried to collect and analyze too much data which created confusion and no results. Given the large dataset we have already built, our data collection and cleaning processes will be made much easier for deeper and future analysis.
+Given the lack of results from our dataset it is clear that we attempted to analyze too much data. Due to the magnitude of the dataset we collected the majority of our time was spent trying to clean and combine a massive dataset for analysis. While in theory this appeared to be a reasonable goal it appeared to be unnecessary. The much smaller dataset provided by RockFence LLC also failed to give a good model but was able to reiterate other findings regarding the importance of fastballs.
 
-A limiting factor for pitch specific data is that the PITCHf/X system was only installed in MLB stadiums starting in 2008. As such, the most valuable data pertaining specifically to pitchers performance is very limited. On top of this problem is the constant updating and tweaking to the PITCHf/X system itself can create errors and variance within the data. As such it is reasonable to believe that we are still several years away from collecting enough data to make reliable predictions based on this data.
+Future work should take this cue and focus on aspects of a pitchers performance that involves only high speed pitches. It may not be the velocity itself that is off importance but the frequency with which the these high speed pitches are thrown. Pitches of interest would include fastballs, cutters, and change ups. While cutters and change ups have slower velocities due to spin on the ball they may have similar issues regarding the stresses placed on the pitchers elbow as these pitchers start out fast and slow as they approach the plate.
 
-Given the small data set it another alternative would be to work on trends within the season leading up to the injury. Trends may be identified related to fatigue and overuse that may elucitate identifiably risk factors. This would be an extremely time consuming process as data would need to be pulled for every pitcher for every game and then analyzed. While no single game is likely to be of value, trends within season may be more valuable than season means as we and others have attempted to look at.
+A principal compenent analysis could be run on data only on these pitches to continue to reduce the number of components for analysis. This is likely necessary given the small number of pitchers available for sample selection. A neural network would be of extreme interest and was our initial goal when we set out to complete this project. Unfortunately the data collection and cleansing stages took up the majority of our time and left us unable to reduce the data small enough that it would have made sense to build a proper sized network as we were dealing with small sample size and large variable number.
 
+Overall this is an interesting problem to undertake and is only now being addressed. The most recent work was only published in April 2016 so in the coming years we will hopefully have a better dataset and more accurate predictions of risk factors involved.
