--- a/report/report.tex
+++ b/report/report.tex
@@ -167,9 +167,7 @@
 
 % As a general rule, do not put math, special symbols or citations
 % in the abstract or keywords.
-\begin{abstract}
-...
-\end{abstract}
+\input{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
 % \begin{IEEEkeywords}
@@ -184,6 +182,7 @@
 \input{methodology}
 \input{experiments}
 \input{analysis}
+\input{discussion}
 \input{conclusion}
 
 % if have a single appendix:
